# tracker-updater

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build.rs  config_example.toml  log4rs.yaml
.github/: dependabot.yml
.github/workflows/: clippy.yml  handmade_cross_platform.yml  handmade_release.yml
src/: lib.rs  main.rs  rutracker_api.rs  torrent.rs
tests/: test_config.rs  test_qbit_api_fields.rs  test_rutracker_api.rs  test_torrent.rs  test_update_logic.rs
